--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+table {
+  border-collapse: collapse;
+  width: 100%;
+  height: 500px;
+  overflow-y:scroll;
+  display: block;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+thead tr:first-child th {
+  position: sticky; top: 0; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th, td {
+  text-align: left;
+  padding: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+tr:nth-child(even) {
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+th {
+  background-color: #f2f2f2;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+tr:hover {
+  opacity: 0.5;
+  transition: 0.5s;
+  cursor: pointer;
 }
