--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,17 +1,20 @@
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 50%;
   height: 500px;
-  overflow-y:scroll;
+  overflow-y: scroll;
   display: block;
   border-radius: 5px;
 }
 
 thead tr:first-child th {
-  position: sticky; top: 0; 
+  position: sticky;
+  top: 0;
+  width: 488.617px;
 }
 
-th, td {
+th,
+td {
   text-align: left;
   padding: 8px;
 }
@@ -25,9 +28,19 @@ th {
   color: black;
 }
 
-
 tr:hover {
   opacity: 0.5;
   transition: 0.5s;
   cursor: pointer;
+}
+
+.SearchBar {
+  width: 488.617px;
+  padding: 10px;
+  border-radius: 6px;
+  border: 0px;
+}
+
+.searchContainer {
+  padding: 5px;
 }
