--- a/react/src/App.css
+++ b/react/src/App.css
@@ -124,3 +124,37 @@
 .map > h1 {
   color: white;
 }
+
+.overlay {
+  background-color: transparent !important; 
+}
+
+.slide-pane {
+  background: #17141d !important;
+}
+
+.slide-pane__header {
+  background: #2b2538 !important;
+  ;
+}
+
+.slider {
+  width: 80%;
+  max-width: 400px;
+  min-width: 250px;
+  padding: 1.5rem;
+  border-radius: 16px;
+  color: white; 
+  transition-duration: 600ms;
+  transition-timing-function: ease;
+  position: relative;
+}
+
+.slider-details {
+  display: flex;
+  flex-direction: column;
+}
+
+::-webkit-scrollbar {
+  display: none; /* WebKit browsers (Chrome, Safari) */
+}
