--- a/react/src/App.css
+++ b/react/src/App.css
@@ -179,12 +179,14 @@
 
 input {
   width: 60px;
+  margin-right: 5px;
+  border-radius: 6px;
 }
 
 .values-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   padding: 0;
   margin: 0;
@@ -198,4 +200,6 @@ input {
   padding: 0;
   margin: 0;
   border-radius: 5px;
+  position: relative;
+  height: 100%;
 }
