--- a/react/src/index.css
+++ b/react/src/index.css
@@ -3,6 +3,8 @@ body {
   justify-content: center; */
   /* align-items: center; */
   height: 100vh;
+  max-height: 100vh;
+  overflow-y: hidden;
   margin: 3px;
   font-family: sans-serif;
   background-color: black;
