Issue #176. Added more filter options to employment type filter

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -214,3 +214,13 @@ input {
   max-width: 350px;
   overflow-x: hidden;
 }
+
+.employment-type-wrapper label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.employment-type-wrapper label input[type="checkbox"] {
+  margin-right: 5px;
+}
+
