--- a/react/src/App.css
+++ b/react/src/App.css
@@ -207,12 +207,12 @@ input {
 .location-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0;
     margin: 0;
     border-radius: 5px;
     max-width: 350px;
-    max-height: 300px;
+    height: 350px;
     overflow-y: scroll;
 }
 
