added the map in progress

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -119,6 +119,7 @@
     justify-content: center;
     background-color: grey;
     max-height: 100vh;
+    flex-direction: column;
 }
 
 .map > h1 {
