--- a/react/src/components/job card/JobCard.css
+++ b/react/src/components/job card/JobCard.css
@@ -26,25 +26,6 @@
     transform: translateX(-70px);
 }
 
-.card-body h1 {
-    color: #fff;
-    font-size: 1.5rem;
-    /* margin-bottom: 1rem; */
-}
-
-.card-body h2 {
-    color: #fff;
-    font-size: 1.25rem;
-    /* margin-bottom: 1rem; */
-}
-
-.card-body {
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 300;
-    /* margin-bottom: 1rem; */
-}
-
 .card:after {
     background: linear-gradient(transparent, mediumslateblue, transparent);
     height: 120px;
@@ -67,6 +48,27 @@
     opacity: 1;
 }
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 20px;
+}
+
+.card-body h1 {
+    color: #fff;
+    font-size: 1.75rem;
+    margin: 0;
+}
+
+.card-body p {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: thin;
+    margin: 0;
+}
+
 .header-wrapper {
     display: flex;
     flex-direction: row;
@@ -74,10 +76,19 @@
 }
 
 .source-logo {
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
     height: 50px;
     width: 50px;
     border-radius: 10%;
     background-color: #2c2736;
+}
+
+.source-logo img {
+    max-width: 80%; /* Ensure image doesn't exceed container width */
+    max-height: 80%; /* Ensure image doesn't exceed container height */
+    border-radius: inherit; /* Inherit border-radius from parent */
 }
 
 .post-info {
@@ -114,4 +125,36 @@
     color: #fffbec;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+}
+
+.card-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #e4e7ed;
+}
+
+.card-footer span {
+    color: white;
+    font-weight: bold;
+}
+
+.progress-bar {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background-color: #2c2736;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.filled-progress,
+.overlay-progress {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-color: #fed85d;
+    border-radius: 5px;
 }
