--- a/react/src/components/search/SearchBar.css
+++ b/react/src/components/search/SearchBar.css
@@ -10,3 +10,16 @@
   top: 0;
   z-index: 1; */
 }
+
+.search-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+    background-color: black;
+    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.75); /* Adjust shadow values as needed */
+    padding: 10px;
+    padding-bottom: 22px;
+}
