--- a/react/src/components/search/SearchBar.css
+++ b/react/src/components/search/SearchBar.css
@@ -6,9 +6,6 @@
     background-color: #383440;
     color: white;
     outline: none;
-    /* position: sticky;
-  top: 0;
-  z-index: 1; */
 }
 
 .search-container {
@@ -17,7 +14,20 @@
     justify-content: flex-start;
     position: sticky;
     top: 0;
-    z-index: 99;
+    z-index: 1;
+    background-color: black;
+    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.75); /* Adjust shadow values as needed */
+    padding: 10px;
+    padding-bottom: 22px;
+}
+
+.search-container-filter-opened {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: sticky;
+    top: 0;
+    z-index: -1;
     background-color: black;
     box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.75); /* Adjust shadow values as needed */
     padding: 10px;
