--- a/react/src/components/filter/FilterMenu.css
+++ b/react/src/components/filter/FilterMenu.css
@@ -1,6 +1,8 @@
 .filter-icon {
     width: 40px;
     height: 40px; /* Set a height for better appearance */
+    font-family: "futura";
+    font-weight: 5;
     background-color: white;
     outline: none;
     border: none; /* Remove default border */
@@ -9,6 +11,7 @@
     text-align: center;
     margin-left: 20px;
     cursor: pointer; /* Set cursor to pointer for better UX */
+    color: 383440;
 }
 
 input {
