--- a/react/src/components/search/SearchBar.css
+++ b/react/src/components/search/SearchBar.css
@@ -16,7 +16,7 @@
     top: 0;
     z-index: 1;
     background-color: black;
-    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.75); /* Adjust shadow values as needed */
+    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.75); 
     padding: 10px;
     padding-bottom: 22px;
 }
