--- a/react/src/components/job side bar/JobSideBar.css
+++ b/react/src/components/job side bar/JobSideBar.css
@@ -53,19 +53,20 @@
 }
 
 .apply-button {
-    display: inline-block;
+    display: block; 
+    width: calc(100% - 40px); 
     padding: 10px 20px;
-    margin-top: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
+    margin: 10px auto 30px;
+    background-color: #007bff; 
+    color: #fff; 
+    border: none; 
     border-radius: 5px;
     text-decoration: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-align: center;
-    margin-bottom: 30px;
+    transition: background-color 0.3s ease; 
+    text-align: center; 
 }
+
 
 .apply-button:hover {
     background-color: #0056b3;
