--- a/react/src/components/map/JobMap.css
+++ b/react/src/components/map/JobMap.css
@@ -1,6 +1,7 @@
 .JobMap {
     grid-column: 6 / 15;
     grid-row: 2 / 10;
-    height: 100vh;
-    width: 100%;
+    width: calc(100% - 175px); 
+    margin-right: 50px; 
+    margin-bottom: 50px; 
 }
