--- a/react/src/components/navbar/NavBar.css
+++ b/react/src/components/navbar/NavBar.css
@@ -24,6 +24,8 @@ nav {
     display: flex;
     width: 800px;
     justify-content: space-around;
+    right: 0;
+    position: absolute;
 }
 
 .nav-item {
